--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -109,6 +109,24 @@
                 android:layout_alignStart="@+id/question"
                 android:layout_alignRight="@+id/question"
                 android:layout_alignEnd="@+id/question" />
+
+            <TextView
+                android:text="HINT"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/score_text"
+                android:layout_alignLeft="@+id/score_text"
+                android:layout_alignStart="@+id/score_text"
+                android:id="@+id/textView2" />
+
+            <TextView
+                android:text="10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/textView2"
+                android:layout_alignRight="@+id/score"
+                android:layout_alignEnd="@+id/score"
+                android:id="@+id/hintNum" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
