--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,6 +11,6 @@
     <item
         android:id="@+id/setting"
         android:icon="@drawable/setting"
-        android:title="Setting" />
+        android:title="Night Mode" />
 
 </menu>
